--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,20 @@ body {
   user-select: none;
 }
 
+#input-portal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 10000;
+}
+
+#input-portal > * {
+  pointer-events: auto;
+}
+
 * {
   -webkit-tap-highlight-color: transparent;
 }
